# GemmaBackend

./: .gitignore  API_ENDPOINTS.md  db.sqlite3  manage.py  pyproject.toml  test-data.json  test-data.sh  test.py  update.sh
gemma/: asgi.py  config.py  settings.py  urls.py  wsgi.py
shop/: models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_rename_updates_at_cart_updated_at_and_more.py  0003_productsize_created_at_productsize_updated_at.py  0004_productsize_category.py  0005_remove_productsize_category.py  0006_remove_cart_editable_productsize_order_and_more.py  0007_product_price_productingredient.py  0008_productingredient_product.py  0009_alter_productingredient_product.py  0010_product_dough_types_categoryproductsize.py  0011_alter_categoryproductsize_category.py
user/: apps.py  auth.py  managers.py  models.py  rate_limit.py  serializers.py  signals.py  urls.py  views.py
user/migrations/: 0002_user_uid.py  0003_contact.py  0004_logincode_updates_at_user_is_guest_user_phone_and_more.py  0004_role_verificationcode_alter_contact_unique_together_and_more.py
