[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-rest-framework>=0.1.0",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.29.0",
    "google-auth>=2.43.0",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
